--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,3 +1,10 @@
-$font-rubik:'Rubik-regular';
-$font-rambla:'Rambla-regular';
-$font-karla:'Karla-regular';
+$font-rubik: "Rubik-regular";
+$font-rambla: "Rambla-regular";
+$font-karla: "Karla-regular";
+
+.container {
+  max-width: 1280px;
+  width: 100%;
+  margin: 0 auto;
+  padding:0 10px;
+}
