--- a/src/components/Navbar/navbar.scss
+++ b/src/components/Navbar/navbar.scss
@@ -87,6 +87,7 @@
     flex-direction: column;
     justify-content: center;
     gap: 30px;
+    padding-right: 20px;
     li {
       a {
         color: #fff;
