--- a/src/components/Book/book.scss
+++ b/src/components/Book/book.scss
@@ -1,16 +1,68 @@
-@import '../../styles/variables';
-@import '../../styles/mixins';
+@import "../../styles/variables";
+@import "../../styles/mixins";
 
-.book{
-      width: 416.21px;
-      height: 225.354px;
-      border: 1px solid red;
-      display: flex;
-      column-gap: 26px;
-      border-radius: 6px;
-      &__info{
-        display: flex;
-        flex-direction: column;
+.book {
+  width: 416.21px;
+  height: 225.354px;
+  display: flex;
+  column-gap: 26px;
+  border-radius: 6px;
+  &__info {
+    display: flex;
+    flex-direction: column;
+    gap: 0;
+    h2 {
+      color: #000;
+      font-family: $font-rubik;
+      font-size: 25px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 35px; /* 140% */
+      text-transform: capitalize;
+      max-width: 204px;
+      margin-bottom: 0;
+    }
+    h3 {
         
+      color: rgba(0, 0, 0, 0.6);
+      font-family: $font-rubik;
+      font-size: 16px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: normal;
+      text-transform: capitalize;
+      margin-bottom: 0px;
+    }
+    &-rating {
+      display: flex;
+      align-items: center;
+      column-gap: 10px;
+      height: 30px;
+      margin-top: 10px;
+
+      img {
+        width: 85px;
+        height: 11px;
       }
+
+      h5 {
+        color: rgba(0, 0, 0, 0.3);
+        font-family: $font-rubik;
+        font-size: 13px;
+        font-style: normal;
+        font-weight: 300;
+        line-height: 13px; /* 100% */
+        letter-spacing: 0.032px;
+      }
+    }
+    p {
+      color: rgba(0, 0, 0, 0.3);
+      font-family: $font-rambla;
+      font-size: 12px;
+      font-style: normal;
+      font-weight: 400;
+      margin-top: 15px;
+    
+    }
+  }
 }
