--- a/src/components/BookShelf/bookshelf.scss
+++ b/src/components/BookShelf/bookshelf.scss
@@ -3,6 +3,7 @@
 .bookshelf {
   background: #f5f6f8;
   display: flex;
+  padding-bottom: 79px;
 }
 
 .genres {
@@ -64,10 +65,12 @@
     }
   }
 
-  &__recomendations{
+  &__recomendations {
     margin-top: 120px;
-
   }
+}
+.books__wrapper {
+  flex: 5;
 }
 .books {
   flex: 5;
@@ -94,11 +97,39 @@
     flex-wrap: wrap;
     gap: 20px;
   }
-  .popular{
+  .popular {
     margin-top: 130px;
-    &__books{
+    &__books {
       display: flex;
       column-gap: 63px;
     }
+  }
+}
+
+.books__second {
+  flex: 5;
+  border-radius: 10px 0px 0px 10px;
+  margin: 2rem;
+  background: #f5f6f8;
+  box-shadow: 0px 15px 80px 0px rgba(0, 0, 0, 0.1);
+  padding-left: 2rem;
+  padding-right: 2rem;
+  padding-top: 0.5rem;
+  padding-bottom: 2rem;
+  h2 {
+    color: #000;
+    font-family: $font-rubik;
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    letter-spacing: 0.08px;
+    text-align: center;
+  }
+
+  &-cards {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
   }
 }
