--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -37,3 +37,179 @@ footer {
     }
   }
 }
+
+
+@include respond-to-lg{
+
+.footer {
+  height: 80px;
+  display: flex;
+  justify-content: flex-end;
+  column-gap: 250px;
+  align-items: center;
+  padding-right: 30px;
+  padding-left: 20px;
+  h2 {
+    color: #fff;
+    font-family: $font-rubik;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+  }
+  ul {
+    list-style: none;
+    display: flex;
+    column-gap: 30px;
+    li {
+      a {
+        text-decoration: none;
+        font-family: $font-rubik;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: normal;
+      }
+    }
+  }
+}
+
+}
+
+@include respond-to-839{
+  .footer {
+  height: 80px;
+  display: flex;
+  justify-content: flex-end;
+  column-gap: 10rem;
+  align-items: center;
+  padding-right: 30px;
+  padding-left: 20px;
+  h2 {
+    color: #fff;
+    font-family: $font-rubik;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+  }
+  ul {
+    list-style: none;
+    display: flex;
+    column-gap: 30px;
+    li {
+      a {
+        text-decoration: none;
+        font-family: $font-rubik;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: normal;
+      }
+    }
+  }
+}
+}
+
+@include respond-to-640{
+  .footer {
+  height: 80px;
+  display: flex;
+  justify-content: flex-end;
+  column-gap: 8rem;
+  align-items: center;
+  padding-right: 30px;
+  padding-left: 20px;
+  h2 {
+    color: #fff;
+    font-family: $font-rubik;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+  }
+  ul {
+    list-style: none;
+    display: flex;
+    column-gap: 30px;
+    li {
+      a {
+        text-decoration: none;
+        font-family: $font-rubik;
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: normal;
+      }
+    }
+  }
+}
+}
+@include respond-to-xs{
+  .footer {
+  height: 80px;
+  display: flex;
+  justify-content: flex-end;
+  column-gap: 5rem;
+  align-items: center;
+  padding-right: 30px;
+  padding-left: 20px;
+  h2 {
+    color: #fff;
+    font-family: $font-rubik;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+  }
+  ul {
+    list-style: none;
+    display: flex;
+    column-gap: 15px;
+    li {
+      a {
+        text-decoration: none;
+        font-family: $font-rubik;
+        font-size: 12px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: normal;
+      }
+    }
+  }
+}
+}
+@include respond-to-490{
+  .footer {
+  height: 80px;
+  display: flex;
+  justify-content: flex-end;
+  column-gap: 2rem;
+  align-items: center;
+  padding-right: 10px;
+  padding-left: 10px;
+  h2 {
+    color: #fff;
+    font-family: $font-rubik;
+    font-size: 10px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+  }
+  ul {
+    list-style: none;
+    display: flex;
+    column-gap: 10px;
+    li {
+      a {
+        text-decoration: none;
+        font-family: $font-rubik;
+        font-size: 10px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+      }
+    }
+  }
+}
+}
