--- a/src/components/PopularBooks/popularbooks.scss
+++ b/src/components/PopularBooks/popularbooks.scss
@@ -26,3 +26,64 @@
   transform: scale(0.9);
   transition: all 0.2s;
 }
+
+
+@include respond-to-1260{
+  .popular-card {
+  display: flex;
+  flex-direction: column;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  max-width: 100%;
+  width: 100%;
+  border-radius: 10px;
+  &__img {
+    width:100%;
+    height: 350px;
+  }
+  h2,
+  h3 {
+    margin-left: 1rem;
+    font-size: 15px;
+  }
+}
+
+}
+@include respond-to-sm{
+  .popular-card {
+  display: flex;
+  flex-direction: column;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  max-width: 100%;
+  width: 100%;
+  border-radius: 10px;
+  &__img {
+    width:100%;
+    height: 288px;
+  }
+  h2,
+  h3 {
+    margin-left: 1rem;
+  }
+}
+
+}
+@include respond-to-490{
+  .popular-card {
+  display: flex;
+  flex-direction: column;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  max-width: 100%;
+  width: 100%;
+  border-radius: 10px;
+  &__img {
+    width:100%;
+    height: 350px;
+  }
+  h2,
+  h3 {
+    margin-left: 1rem;
+    font-size: 15px !important;
+  }
+}
+
+}
