--- a/src/components/ShoppingBook/shoppingbook.scss
+++ b/src/components/ShoppingBook/shoppingbook.scss
@@ -3,15 +3,21 @@
 .shoppingBook {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   width: 416.21px;
-  height: 225.354px;
+  height: 338px;
   display: flex;
   column-gap: 26px;
   border-radius: 6px;
   padding-right: 15px;
+  img{
+    height:'225px';
+    width: 100%;
+
+  }
   &__info {
     display: flex;
     flex-direction: column;
     gap: 0;
+    padding: 0.2rem;
     h2 {
       color: #000;
       font-family: $font-rubik;
@@ -95,4 +101,108 @@
       transition: all 0.2s;
     }
   }
+}
+
+
+
+@include respond-to-640{
+  .shoppingBook {
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  width: 150px;
+  height: 550px;
+  display: flex;
+  flex-direction: column;
+  column-gap: 26px;
+  border-radius: 6px;
+  padding-right: 0px;
+  img{
+    width: 100%;
+  }
+  &__info {
+    display: flex;
+    flex-direction: column;
+    gap: 0;
+    padding-bottom: 3rem;
+    h2 {
+      color: #000;
+      font-family: $font-rubik;
+      font-size: 25px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 35px; /* 140% */
+      text-transform: capitalize;
+      max-width: 204px;
+      margin-bottom: 0;
+    }
+    h3 {
+      color: rgba(0, 0, 0, 0.6);
+      font-family: $font-rubik;
+      font-size: 16px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: normal;
+      text-transform: capitalize;
+      margin-bottom: 0px;
+    }
+    &-rating {
+      display: flex;
+      align-items: center;
+      column-gap: 10px;
+      height: 30px;
+      margin-top: 10px;
+
+      img {
+        width: 85px;
+        height: 11px;
+      }
+
+      h5 {
+        color: rgba(0, 0, 0, 0.3);
+        font-family: $font-rubik;
+        font-size: 13px;
+        font-style: normal;
+        font-weight: 300;
+        line-height: 13px; /* 100% */
+        letter-spacing: 0.032px;
+      }
+    }
+    p {
+      color: rgba(0, 0, 0, 0.3);
+      font-family: $font-rambla;
+      font-size: 12px;
+      font-style: normal;
+      font-weight: 400;
+      margin-top: 15px;
+    }
+    button {
+      border-radius: 10px;
+      border: 1px solid #ff971d;
+      background: rgba(255, 151, 29, 0.1);
+      display: flex;
+      padding: 8px;
+      justify-content: center;
+      align-items: center;
+      color: #ff971d;
+      font-family: $font-rubik;
+      font-size: 12px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: normal;
+      text-transform: capitalize;
+      transition: all 0.2s;
+    }
+     button:hover {
+      background-color: #ff971d;
+      color: #fff;
+      transform: scale(1.03);
+      transition: all 0.2s;
+    }
+    button:active {
+      background-color: #ff971d;
+      color: #fff;
+      transform: scale(0.9);
+      transition: all 0.2s;
+    }
+  }
+}
 }
